test/files/neg/t7052.check
t7052.scala:9: error: name clash between defined and inherited member:
def apply(xs: Int*): Int in class A and
def apply(xs: Seq[Int]): Int at line 9
have same type after erasure: (xs: Seq): Int
  def apply(xs: Seq[Int]) = 27
      ^
1 error
